tests/fixtures/BinaryOperationLiteralTests/errors/int_and_nir.fg
/; EXPECT_ERROR: InvalidBinaryOperationWithTypes
print(1 + Nir)

